src/objects/Zendesk__ZendeskLog__c.object
<CustomObject>
    <fields>
        <fullName>Zendesk__DateTime__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Log_Level__c</fullName>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Logging_Level__c</fullName>
        <description>New logging level field</description>
        <label>Logging Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequestBody__c</fullName>
        <label>Request Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequestHeader__c</fullName>
        <label>Request Header</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resource__c</fullName>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ResponseCode__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zendesk Support Ticket</label>
        <referenceTo>Zendesk__Zendesk_Ticket__c</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>Zendesk__This_Week</fullName>
        <columns>NAME</columns>
        <columns>Zendesk__DateTime__c</columns>
        <columns>Zendesk__ResponseCode__c</columns>
        <columns>Zendesk__Description__c</columns>
        <columns>Zendesk__Method__c</columns>
        <columns>Zendesk__Resource__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Zendesk__Endpoint__c</columns>
        <columns>Zendesk__RequestBody__c</columns>
        <columns>Zendesk__RequestHeader__c</columns>
        <columns>Zendesk__Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Zendesk__Ticket_Warning</fullName>
        <columns>Zendesk__DateTime__c</columns>
        <columns>Zendesk__Description__c</columns>
        <columns>Zendesk__RequestBody__c</columns>
        <columns>Zendesk__Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zendesk__Ticket__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <label>Ticket Warning</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Zintegration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <recordTypes>
        <fullName>Zendesk__Bulk_Sync</fullName>
        <active>true</active>
        <label>Bulk Sync</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zendesk__Callout</fullName>
        <active>true</active>
        <label>Callout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zendesk__Ongoing_Sync</fullName>
        <active>true</active>
        <label>Ongoing Sync</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zendesk__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zendesk__TicketLog</fullName>
        <active>true</active>
        <label>Ticket Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zendesk__Ticket_Sending</fullName>
        <active>true</active>
        <label>Ticket Sending</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>